--- a/COUR/jntu.html
+++ b/COUR/jntu.html
@@ -44,7 +44,7 @@
         <section>
             <h2>Study Material</h2>
             <a href="notes/thermodynamics.pdf" target="_blank"> <img src="notes/download9.jpg" width="24%" height="60%"  alt=""></a>
-            <a href="notes/fluidmechanics.pdf" target="_blank"> <img src="notes/download1.jpg.crdownload" width="26%" height="74%"  alt=""></a>
+            <a href="notes/fluidmechanics.pdf" target="_blank"> <img src="notes/download10.jpg" width="26%" height="74%"  alt=""></a>
             <a href="notes/java.pdf" target="_blank"> <img src="notes/download2.jpg" width="25%" height="68%"  alt=""></a>
             <a href="notes/fluidmechanics.pdf" target="_blank"> <img src="notes/download6.jpg" width="24%" height="60%"  alt=""></a>
         </section>
